[gd_scene load_steps=8 format=2]

[ext_resource path="res://inimigo/inimigo.gd" type="Script" id=1]
[ext_resource path="res://inimigo/projetil_inimigo_disco.tscn" type="PackedScene" id=2]
[ext_resource path="res://inimigo/ufoGreen.png" type="Texture" id=3]
[ext_resource path="res://inimigo/enemy_hit.wav" type="AudioStream" id=4]
[ext_resource path="res://inimigo/enemy_laser.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 47.0551
_sections_unfolded = [ "Resource" ]

[sub_resource type="Animation" id=2]

resource_name = "impacto"
length = 1.0
loop = false
step = 0.31
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Inimigo" type="KinematicBody2D" groups=[
"inimigos",
]]

position = Vector2( 684.775, 55.116 )
scale = Vector2( 0.6, 0.6 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}
Projetil = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Z" ]

[node name="SomDano" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="TimerTiro" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Anim" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/impacto = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="TimerAtirar" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="SomTiro" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"


